--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "https://blog.ascher.ca" # the base hostname & protocol for your site
+url: "https://ascher.ca" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 twitter_handle: '@davidascher'
